@@ -4,13 +4,13 @@ Hash: SHA1
 AUX poppler018.patch 5041 RMD160 8f7637543f7befdf5b0fa9341976ac19d25c9878 SHA1 6aba817d4270540608cc7f014422fdf4f3d09f75 SHA256 98317c41cab055cde67fd1eefa6c79fa8ec0ac2b36d93a094abe9eb8e834221c
 DIST luatex-beta-0.70.1-doc.tar.bz2 1048489 RMD160 f2ed51ea56c6a3fbb4eb6ae22a9cebc9f578276e SHA1 933ac238422c5c1baaed265aa79071921a358d74 SHA256 4f1d24777725a606efbf5d7a59064245c46fb29b8066236c6b48fb423a595606
 DIST luatex-beta-0.70.1.tar.bz2 8181155 RMD160 dfa3710bb48ba5d73ae5e41746d7c1a3a965f619 SHA1 063bd698daab38ac6b04b45c820a15a0423aaab5 SHA256 c641a4ba1535ede6ee8e2a958d8c4b436f5979c5be6f3f51d3dec5b4df6bb6ed
-EBUILD luatex-0.70.1.ebuild 3829 RMD160 1ff54fe22f6626c86622a4389efb6c0e0b0fe7d9 SHA1 7f65e404514d90abcefc7bce08ac1c4725c3c032 SHA256 6a1c581ca5c9fba0350b19e5ea5f9862309f4fa778cafdce981425daa2d9f625
-MISC ChangeLog 12102 RMD160 1863feb200009b9376f31a0d0a6d7d28a9ec2fee SHA1 07ec53b531bed8e485b232f9444d468d79852f4f SHA256 e1a8c45825315924f006727a9743d89ad443ce919cd4e4cd1ca22233042f8f61
+EBUILD luatex-0.70.1.ebuild 3828 RMD160 6f0076d3bdba3a0a0f292048e2a1c553f1fee6ff SHA1 333f4a1d7866aef980d4c6585ed59e33af32b74f SHA256 5889691777ac8f9d47942ca745319b48662baaaa7e8a88780966748227ede63d
+MISC ChangeLog 12313 RMD160 057a73d9c569997f60c5ece36f7ee7662d45489c SHA1 d0ef9eba05078ab64522606c24a1c7adf8821c80 SHA256 cda7cb692fc0b70c7efd93dbc3f3038262f393d4fc3a1bcf7b6f193e634982f9
 MISC metadata.xml 336 RMD160 0ea7c1246551ffee8e6960e806a66a231e1d3cc7 SHA1 ca5b152307b89eb030607b9d4862c270d248dfa0 SHA256 126018a4822f911e52afe63656a10f2a7b0b938ea106f2a2caef00bdc18a845f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk6VroAACgkQX3X2B8XHTokj3gCdGBWREcyytwuhKR4L2GqWh3ff
-f64AmwU9jJ7J2zgcunvI/yl7VFQ7F858
-=EgAT
+iEYEARECAAYFAk+3ZbsACgkQX3X2B8XHTonrswCeMagDx9PEhaOb6Ndm/3naXtqj
+4WoAn1q7EdoMBBZ+bOW5Rq/FEj4S3PVa
+=gey/
 -----END PGP SIGNATURE-----
