@@ -1,6 +1,12 @@
 # ChangeLog for dev-tex/luatex
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/luatex/ChangeLog,v 1.97 2011/10/05 18:10:27 aballier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/luatex/ChangeLog,v 1.99 2012/05/09 13:27:50 aballier Exp $
+
+  09 May 2012; Alexis Ballier <aballier@gentoo.org> luatex-0.70.1.ebuild:
+  keyword ~amd64-fbsd
+
+  02 May 2012; Jeff Horelick <jdhore@gentoo.org> luatex-0.70.1.ebuild:
+  dev-util/pkgconfig -> virtual/pkgconfig
 
   05 Oct 2011; Alexis Ballier <aballier@gentoo.org> +files/poppler018.patch,
   luatex-0.70.1.ebuild:
